<resources>
    <string name="app_name">Shows-Asim</string>
    <string name="background_image">Background image</string>
    <string name="shows">Shows</string>
    <string name="login_message">In order to continue please log in</string>
    <string name="login_header">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="play_button_image">Play button image</string>
    <string name="toggle_shows">Toggle shows</string>
    <string name="empty_shows_statement">Your shows are not showing. Get it?</string>
    <string name="no_shows_image">No shows image</string>
    <string name="show_image">Show image</string>
    <string name="user_image">User image</string>
    <string name="star">Star</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="submit">Submit</string>
    <string name="comment">Comment</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirm_message">Are you sure you want to logout?</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="reg_success">Registration successful</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="invalid_email">Please provide a valid email address</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="registration_fail">Registration failed</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>