<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_background">

        <ImageView
            android:id="@+id/ivTopLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_image"
            android:src="@drawable/top_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ivTopRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_image"
            android:src="@drawable/top_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ivTriangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_56"
            android:contentDescription="@string/background_image"
            android:src="@drawable/small_play"
            app:layout_constraintBottom_toBottomOf="@id/ivTopRight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivTopLeft"/>

        <TextView
            android:id="@+id/tvShowsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/shows"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivTriangle"
            app:layout_constraintStart_toEndOf="@id/ivTriangle"
            app:layout_constraintTop_toTopOf="@id/ivTriangle"/>

        <TextView
            android:id="@+id/tvLoginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_104"
            android:text="@string/login_header"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivTriangle"/>

        <TextView
            android:id="@+id/tvLoginMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/login_message"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginHeader"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/spacing_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_24"
            android:layout_marginEnd="@dimen/spacing_24"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginMessage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/spacing_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginEnd="@dimen/spacing_24"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/chbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_24"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/remember_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"/>

        <android.widget.Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/spacing_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginEnd="@dimen/spacing_24"
            android:layout_marginBottom="@dimen/spacing_24"
            android:alpha="0.5"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/chbRememberMe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"/>

        <android.widget.Button
            android:id="@+id/btnRegister"
            android:layout_width="@dimen/spacing_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginEnd="@dimen/spacing_24"
            android:layout_marginBottom="@dimen/spacing_32"
            android:alpha="0.5"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

