<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_24dp"
    android:paddingTop="@dimen/margin_40dp"
    android:paddingEnd="@dimen/padding_24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_a_review"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rbReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilComment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:hint="@string/comment"
        android:textColorHint="@color/purple_background"
        app:boxStrokeColor="@color/purple_background"
        app:hintTextColor="@color/purple_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textAllCaps="false" />

</LinearLayout>