<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarShows"
        android:layout_width="@dimen/spacing_0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/shows_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvShows"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_64"
        android:layout_marginStart="@dimen/spacing_24"
        android:text="@string/shows"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShows"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="@dimen/spacing_0"
        android:layout_marginTop="@dimen/spacing_40"
        android:layout_marginBottom="@dimen/spacing_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShows"
        tools:listitem="@layout/view_show_item"/>

    <ImageView
        android:id="@+id/ivEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_240"
        android:contentDescription="@string/no_shows_image"
        android:src="@drawable/ic_shows_empty_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShows"/>

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:textSize="@dimen/text_size_16sp"
        android:text="@string/empty_shows_statement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivEmptyState"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="ivEmptyState, tvEmptyState"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupFullState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="rvShows"/>
</androidx.constraintlayout.widget.ConstraintLayout>