<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_80dp">

            <ImageView
                android:id="@+id/ivShow"
                android:contentDescription="@string/show_image"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/show_details_image_height"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_office" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_24dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivShow"
                tools:text="Stranger Things is an American science fiction horror drama television series created by the Duffer Brothers that is streaming on Netflix. The brothers serve as showrunners and are executive producers along with Shawn Levy and Dan Cohen. The first season of the series was released on Netflix on July 15, 2016." />

            <TextView
                android:id="@+id/tvReviewHeader"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:text="@string/reviews"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <TextView
                android:id="@+id/tvReviewStats"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReviewHeader"
                tools:text="3 REVIEWS, 3.67 AVERAGE" />

            <RatingBar
                android:id="@+id/rbShow"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:isIndicator="true"
                android:numStars="5"
                android:theme="@style/RatingBar"
                android:stepSize="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReviewStats" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReview"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rbShow"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/item_review" />

            <TextView
                android:id="@+id/tvNoReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_36dp"
                android:text="@string/no_reviews_yet"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReviewHeader" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupNoReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="tvNoReview" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:constraint_referenced_ids="tvReviewStats, rbShow, rvReview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/flReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <Button
            android:id="@+id/btnWriteReview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_24dp"
            android:background="@drawable/button_background"
            android:text="@string/write_a_review"
            android:textAllCaps="false" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>